// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ZipCodeField/> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE JvWob"
    id="testForm"
  >
    <div
      class="sc-kEqYlL dXeAFH"
    >
      <label
        for="text_zip"
      >
        Kod pocztowy
      </label>
      <div
        class="sc-lmgQde krpvJC"
      >
        <input
          class="sc-hBMVcZ kICbZw"
          id="testId"
          label="Kod pocztowy"
          name="text_zip"
          placeholder="Kod pocztowy"
          value="50600"
        />
      </div>
      <span
        class="sc-ksluoS cNvzFC"
      >
        Podane dane są nieprawidłowe
      </span>
    </div>
  </form>
</div>
`;

exports[`<ZipCodeField/> matches snapshot 1`] = `
<input
  class="sc-hBMVcZ hoeMOd"
  id="testId"
  label="Kod pocztowy"
  name="text_zip"
  placeholder="Kod pocztowy"
  value=""
/>
`;

exports[`<ZipCodeField/> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE JvWob"
    id="testForm"
  >
    <div
      class="sc-kEqYlL dXeAFH"
    >
      <label
        for="text_zip"
      >
        Zip Code*
      </label>
      <div
        class="sc-lmgQde krpvJC"
      >
        <input
          class="sc-hBMVcZ kICbZw"
          id="testId"
          label="Zip Code"
          name="text_zip"
          placeholder="Kod pocztowy*"
          required=""
          value=""
        />
      </div>
      <span
        class="sc-ksluoS cNvzFC"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<ZipCodeField/> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE JvWob"
    id="testForm"
  >
    <div
      class="sc-kEqYlL dXeAFH"
    >
      <label
        for="text_zip"
      >
        ZipCode
      </label>
      <div
        class="sc-lmgQde krpvJC"
      >
        <input
          class="sc-hBMVcZ hoeMOd"
          id="testId"
          label="ZipCode"
          name="text_zip"
          placeholder="Kod pocztowy"
          value=""
        />
      </div>
    </div>
  </form>
</div>
`;
